--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </div>
     </div>    <!-- Floating Navigation -->
     <nav id="floating-nav"
-        class="fixed bottom-15 left-1/4 transform -translate-x-1/2 z-40 bg-white/10 dark:bg-black/20 backdrop-blur-md rounded-full px-3 py-2 md:px-6 md:py-3 border border-white/20 dark:border-gray-700 w-fit max-w-[90vw] mx-auto">
+        class="fixed bottom-10 left-1/4 transform -translate-x-1/2 z-40 bg-white/10 dark:bg-black/20 backdrop-blur-md rounded-full px-3 py-2 md:px-6 md:py-3 border border-white/20 dark:border-gray-700 w-fit max-w-[90vw] mx-auto">
         <div class="flex space-x-1 md:space-x-4 lg:space-x-6 items-center justify-center">
             <a href="#home" class="nav-link active px-2 py-2 md:px-3 lg:px-4 md:py-2 rounded-full transition-all duration-300 text-center flex items-center justify-center"
                 data-section="home" title="Home">
@@ -711,8 +711,7 @@
                                 <span class="text-gray-400 text-sm">May 2025</span>
                             </div>
                             <h4 class="text-lg font-semibold mb-3 text-white">
-                                Inovasi Mahasiswa AMIKOM Raih Prestasi di NextGen Sciences Techpreneur Battle (NSTB)
-                                2025
+                                AMIKOM Students' Innovation Achieves Success in NextGen Sciences Techpreneur Battle (NSTB) 2025
                             </h4>
                             <p class="text-gray-300 text-sm mb-4">
                                 Five student teams from Universitas AMIKOM Yogyakarta successfully advanced to the final
