Add and apply custom navbar styling class
Introduced the .tengahin-navbar class in style.css for improved floating navbar positioning and appearance. Updated index.html to use this new class for the floating navigation element.

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </div>
     </div>    <!-- Floating Navigation -->
     <nav id="floating-nav"
-        class="fixed bottom-10 left-1/4 transform -translate-x-1/2 z-40 bg-white/10 dark:bg-black/20 backdrop-blur-md rounded-full px-3 py-2 md:px-6 md:py-3 border border-white/20 dark:border-gray-700 w-fit max-w-[90vw] mx-auto">
+        class="fixed tengahin-navbar transform -translate-x-1/2 z-40 bg-white/10 dark:bg-black/20 backdrop-blur-md rounded-full px-3 py-2 md:px-6 md:py-3 border border-white/20 dark:border-gray-700 w-fit max-w-[90vw] mx-auto">
         <div class="flex space-x-1 md:space-x-4 lg:space-x-6 items-center justify-center">
             <a href="#home" class="nav-link active px-2 py-2 md:px-3 lg:px-4 md:py-2 rounded-full transition-all duration-300 text-center flex items-center justify-center"
                 data-section="home" title="Home">
